--- a/tars-master/markup/components/services/services.jade
+++ b/tars-master/markup/components/services/services.jade
@@ -1,9 +1,62 @@
 mixin services(data)
     
-    .services
+    section.services
         
         h2 Наши услуги
         .services__grid
             .content
+            
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon1.png")
+                            
+                    h5.services__title Оформление лицензии
+                               
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon2.png")
+                            
+                    h5.services__title Переоформление <br> лицензии
+                    
+                               
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon3.png")
+                            
+                    h5.services__title Продление лицензии
+                    
+                               
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon4.png")
+                            
+                    h5.services__title Возобновление <br> лицензии
+                    
+                               
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon5.png")
+                            
+                    h5.services__title Возобновление <br> лицензии
+                                                   
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon6.png")
+                            
+                    h5.services__title Возобновление <br> лицензии
+                                                   
+                .services__item
+                    .services__elips
+                        .middle
+                            img(src="static/img/general/icon7.png")
+                            
+                    h5.services__title Возобновление <br> лицензии
+                    
 
         
