--- a/tars-master/markup/components/services/services.styl
+++ b/tars-master/markup/components/services/services.styl
@@ -8,5 +8,40 @@
         float left
         width 100%
         bgP(top,center,cover)
-        background url(IMG_SRC-G/sbg.jpg)
-        min-height 700px
+        background url(IMG_SRC-G/ssbg.jpg)
+        padding 45px 0 15px
+        
+        .content
+            text-align center
+        
+        
+    &__item
+        display inline-block
+        width 24%
+        height 250px
+        margin-bottom 35px
+        
+        
+    &__elips
+        display table
+        size(180px,180px)
+        background colfirm
+        position relative
+        margin 0 auto
+        border-radius 50%
+        margin-bottom 22px
+        
+        img
+            position relative
+            display block
+            margin 0 auto
+            
+    &__title
+        font-size 18px
+        font-weight 400
+        text-align center
+        line-height 21px
+        float left
+        width 100%
+        
+        
