--- a/tars-master/markup/pages/index.jade
+++ b/tars-master/markup/pages/index.jade
@@ -6,6 +6,9 @@ html(class="no-js", lang="ru")
     include ../components/nav/nav
     include ../components/slide/slide
     include ../components/services/services
+    include ../components/question/question
+    include ../components/about/about
+    include ../components/static/static
     include ../components/example/example
     include ../components/footer/footer
     
@@ -21,6 +24,9 @@ html(class="no-js", lang="ru")
             +nav()
             +slide()
             +services()
+            +question()
+            +about()
+            +static()
 
             //- Include your components here
             //- +example()
