--- a/tars-master/markup/static/stylus/common.styl
+++ b/tars-master/markup/static/stylus/common.styl
@@ -54,13 +54,35 @@ ul
 .page__buffer
     height 50px
     float-w(100%)
+
+    
+h1,
+h2,
+h3,
+h4
+    font-weight 400
     
     
     
     
-h2
+h2,
+h3
     display block
     font-size 46px
     font-weight 400
     line-height 46px
+    
+    
+h4
+    font-size 28px
+    line-height 34px
+    font-family fonttxt2
+    
+    
+p
+    margin 0px
+    padding 0px
+    color coltxt
+    font-size BASE_SIZE
+    
     
