--- a/tars-master/markup/static/stylus/fonts.styl
+++ b/tars-master/markup/static/stylus/fonts.styl
@@ -18,4 +18,16 @@ $CustomFont: 'CustomFont', Helvetica, Arial, sans-serif;
 */
 
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700,700i,900&subset=cyrillic-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,400i,500,500i,700&subset=cyrillic-ext');
+
+
+/* font-family: "MyriadProRegular"; */
+@font-face {
+    font-family: "MyriadProRegular";
+    src: url("../fonts/MyriadProRegular.eot");
+    src: url("../fonts/MyriadProRegular.eot?#iefix")format("embedded-opentype"),
+    url("../fonts/MyriadProRegular.woff") format("woff"),
+    url("../fonts/MyriadProRegular.ttf") format("truetype");
+    font-style: normal;
+    font-weight: normal;
+}
