--- a/tars-master/markup/static/stylus/vars.styl
+++ b/tars-master/markup/static/stylus/vars.styl
@@ -120,6 +120,7 @@ colH = #132342
 
 // Шрифт (основной)
 fonttxt = 'Roboto', sans-serif;
+fonttxt2 = 'MyriadProRegular', sans-serif;
  
 
 // Шрифт (Medium)
