prince-conte yap!1.2

--- a/tars-master/markup/pages/index.jade
+++ b/tars-master/markup/pages/index.jade
@@ -9,6 +9,7 @@ html(class="no-js", lang="ru")
     include ../components/question/question
     include ../components/about/about
     include ../components/static/static
+    include ../components/bui-info/bui-info
     include ../components/example/example
     include ../components/footer/footer
     
@@ -27,6 +28,8 @@ html(class="no-js", lang="ru")
             +question()
             +about()
             +static()
+            +bui-info()
+            +question()
 
             //- Include your components here
             //- +example()
