--- a/tars-master/markup/static/stylus/common.styl
+++ b/tars-master/markup/static/stylus/common.styl
@@ -32,6 +32,25 @@ ul
     margin 0
     padding 0
     
+
+article
+    
+    li
+        display block
+        margin 15px 0
+        padding-left 12px
+        position relative
+        &:before
+            content '';
+            position absolute
+            display block
+            top 12px
+            left 0px
+            width 4px
+            height 4px
+            border-radius 50%
+            background coltxt
+    
     
 .page__wrapper
     overflow hidden
