--- a/tars-master/markup/components/static/static.styl
+++ b/tars-master/markup/components/static/static.styl
@@ -2,7 +2,20 @@
     background #2f2a2a
     height 450px
     position relative
-    padding 40px 0
+    
+    &:before
+        content '';
+        position absolute
+        display block
+        width 100%
+        height 13px
+        background-repeat repeat-x
+        background-image url(IMG_SRC-G/yap.png)
+        bottom 0px
+        left 0px
+        
+    .content
+        padding 40px 0
     
     .content:before
         content '';
@@ -10,7 +23,7 @@
         height 7px
         width 100%
         left:0px
-        top 228px
+        top 265px
         bgP(center,center,contain)
         background url(IMG_SRC-G/line.png)
         
@@ -45,7 +58,7 @@
         
     &_title
         float-w(100%)
-        margin-bottom 40px
+        margin-bottom 35px
         
         img
             display inline-block
