--- a/tars-master/markup/components/nav/nav.styl
+++ b/tars-master/markup/components/nav/nav.styl
@@ -36,6 +36,9 @@ nav
                 m-speed(.3s)
                 &:hover
                     color #f5edc9
+                    
+                @media screen and (min-width: 1000px) and (max-width: 1199px)
+                    padding 0 29px
                 
         li:first-child
                 
