--- a/tars-master/markup/static/stylus/common.styl
+++ b/tars-master/markup/static/stylus/common.styl
@@ -67,11 +67,11 @@ article
     
     @media screen and (min-width: 600px) and (max-width: 1199px)
         width 100%
-        padding 20px
+        padding 0 20px
     
     @media screen and (min-width: 300px) and (max-width: 1199px)
         width 100%
-        padding 20px
+        padding 0 20px
 
 
 * html .page__wrapper
