--- a/tars-master/markup/components/header/header.styl
+++ b/tars-master/markup/components/header/header.styl
@@ -1,6 +1,10 @@
+height-media = 205px / 2
+
 .header
     background #2f2a2a
     height 105px
+    @media screen and (min-width: 1000px) and (max-width: 1199px)
+        height 205px
     
     .content
         height inherit
@@ -10,6 +14,8 @@
         height inherit
         width 409px
         display inline-table
+        @media screen and (min-width: 1000px) and (max-width: 1199px)
+            height height-media
         
         img
             display block
@@ -22,6 +28,9 @@
         float left
         width 520px
         height inherit
+        @media screen and (min-width: 1000px) and (max-width: 1199px)
+            height height-media
+        
                 
     &__contact-block__item
         float left
@@ -80,6 +89,10 @@
         float right
         height inherit
         display inline-table
-            
+        @media screen and (min-width: 1000px) and (max-width: 1199px)
+            height height-media
+            width 100%
+            text-align center
+            margin-top -15px
 
     
