--- a/tars-master/markup/components/question/question.styl
+++ b/tars-master/markup/components/question/question.styl
@@ -1,11 +1,14 @@
 .question
     background colfirm
-    height 244px
+    min-height 244px
+    
     
     article
         padding 25px 25px 60px
         width 965px
         float left
+        @media screen and (min-width: 300px) and (max-width: 1199px)
+            width 100%
         
     h4
         text-align left
@@ -22,9 +25,16 @@
         width 216px 
         height inherit
         position relative
+        @media screen and (min-width: 300px) and (max-width: 1199px)
+            width 100%
         
         
         .button
             position absolute
             top 135px
             right 0px
+            @media screen and (min-width: 300px) and (max-width: 1199px)
+                position relative
+                top 0
+                float left
+                margin -20px 25px 25px
