--- a/tars-master/markup/components/slide/slide.styl
+++ b/tars-master/markup/components/slide/slide.styl
@@ -18,6 +18,7 @@
         height: 86px;
         z-index: 188;
         
+        
         article
             float left
             width 100%
@@ -32,4 +33,8 @@
                 b
                     font-weight 700
                     line-height 30px
+                    
+                @media screen and (min-width: 300px) and (max-width: 1199px)
+                    font-size 20px
+                    padding 0 45px
 
