--- a/tars-master/markup/components/contacts/contacts.jade
+++ b/tars-master/markup/components/contacts/contacts.jade
@@ -15,7 +15,7 @@ mixin contacts(data)
                 input.contacts_input-two.contacts_input(placeholder="Телефон")
                 span.contacts_label или
                 input.contacts_input-three.contacts_input(placeholder="E-mail")
-                input.contacts_input-four.contacts_input(placeholder="Комментарий")
+                textarea.contacts_input-four.contacts_input(placeholder="Комментарий")
                 input.contacts_button(type="submit" value="Заказать звонок")
 
                 
