--- a/tars-master/markup/components/question/question.styl
+++ b/tars-master/markup/components/question/question.styl
@@ -7,8 +7,11 @@
         padding 25px 25px 60px
         width 965px
         float left
-        @media screen and (min-width: 300px) and (max-width: 1199px)
+        @media screen and (min-width: 600px) and (max-width: 1199px)
             width 100%
+        @media screen and (min-width: 300px) and (max-width: 599px)
+            width 100%
+            padding 20px 0
         
     h4
         text-align left
@@ -27,6 +30,7 @@
         position relative
         @media screen and (min-width: 300px) and (max-width: 1199px)
             width 100%
+            margin-top 25px
         
         
         .button
