--- a/tars-master/markup/components/contacts/contacts.styl
+++ b/tars-master/markup/components/contacts/contacts.styl
@@ -10,6 +10,10 @@
         &:hover
             color colfirm
             
+        @media screen and (min-width: 300px) and (max-width: 599px)
+            font-size 16px
+            margin-left 0px
+            
         .mail
             width 31px
             height 29px
@@ -23,6 +27,8 @@
                                 
         .phone
             background-position -7px -5px
+            @media screen and (min-width: 300px) and (max-width: 599px)
+                margin-left 10px
 
                                            
         .phone2
@@ -55,8 +61,12 @@
         margin 13px 0
         font-weight 300
         outline none
+        resize none
+        overflow hidden
         &::placeholder
             color coltxt
+        @media screen and (min-width: 300px) and (max-width: 999px)
+            width 100% !important
         
     &_input-one
         width 365px
@@ -70,6 +80,10 @@
                               
     &_input-four
         width 905px
+        padding: 16px 20px;
+        height 64px
+        @media screen and (min-width: 300px) and (max-width: 599px)
+            height 180px
         
     &_label
         float left
@@ -77,6 +91,11 @@
         padding 16px
         margin-top 14px
         font-weight 300
+        @media screen and (min-width: 600px) and (max-width: 1199px)
+            padding 16px 50px
+        @media screen and (min-width: 300px) and (max-width: 999px)
+            width 100% 
+            margin-top 0px
         
     &_button
         display inline-block
@@ -90,12 +109,16 @@
         border-radius 3px
         outline none
         border solid 0px
+        @media screen and (min-width: 600px) and (max-width: 1199px)
+            float left
+        
         
         
         
         
     h4
         font-size 30px
+        
         
     
         
