--- a/tars-master/markup/components/footer/footer.styl
+++ b/tars-master/markup/components/footer/footer.styl
@@ -1,11 +1,28 @@
 .footer
     background #2f2a2a
     height 105px
+        
+    @media screen and (min-width: 1000px) and (max-width: 1199px)
+        height 205px
+      
+    @media screen and (min-width: 300px) and (max-width: 999px)
+        height auto
+
     
     &__it-grade
         height inherit
         float right
         display inline-table
+        @media screen and (min-width: 300px) and (max-width: 1199px)
+            height height-media
+            width 100%
+            text-align center
+            margin-top -15px
+            .middle
+                display block
+                margin 30px 0 10px
+            
+        
         
         &__logo
             height 45px
