--- a/tars-master/markup/components/services/services.styl
+++ b/tars-master/markup/components/services/services.styl
@@ -22,6 +22,12 @@
         height 250px
         margin-bottom 35px
         
+        @media screen and (min-width: 600px) and (max-width: 999px)
+            width 49%
+               
+        @media screen and (min-width: 300px) and (max-width: 599px)
+            width 100%
+        
         
     &__elips
         display table
