--- a/tars-master/markup/components/static/static.styl
+++ b/tars-master/markup/components/static/static.styl
@@ -16,8 +16,12 @@
         bottom 0px
         left 0px
         
+        
     .content
         padding 40px 0
+        @media screen and (min-width: 300px) and (max-width: 999px)
+            padding 40px 25px
+            
     
     .content:before
         content '';
@@ -28,6 +32,8 @@
         top 265px
         bgP(center,center,contain)
         background url(IMG_SRC-G/line.png)
+        @media screen and (min-width: 300px) and (max-width: 1199px)
+            display none
         
     
     h3
@@ -57,15 +63,29 @@
     &__item
         float left
         width 20%
-        @media screen and (min-width: 300px) and (max-width: 1199px)
+        @media screen and (min-width: 1000px) and (max-width: 1199px)
             width 33.33333% !important
             height 190px
             padding-left 20px
             margin-bottom 35px
+            
+        @media screen and (min-width: 600px) and (max-width: 999px)
+            width 50% !important
+            
+                       
+        @media screen and (min-width: 300px) and (max-width: 999px)
+            width 100% !important
+            margin 25px 0 45px
+            padding 0 25px
+        
+            
+            
         
     &_title
         float-w(100%)
         margin-bottom 35px
+        @media screen and (min-width: 300px) and (max-width: 999px)
+            margin-bottom 20px
         
         img
             display inline-block
