--- a/tars-master/markup/static/stylus/common.styl
+++ b/tars-master/markup/static/stylus/common.styl
@@ -97,12 +97,18 @@ h3
     font-size 46px
     font-weight 400
     line-height 46px
+    @media screen and (min-width: 300px) and (max-width: 599px)
+        font-size 28px
+        line-height 28px
     
     
 h4
     font-size 28px
     line-height 34px
     font-family fonttxt2
+    @media screen and (min-width: 300px) and (max-width: 599px)
+        font-size 22px
+        line-height 24px
     
     
 p
