--- a/tars-master/markup/components/footer/footer.jade
+++ b/tars-master/markup/components/footer/footer.jade
@@ -4,7 +4,7 @@ mixin footer(data)
         .content
             .header__logo-block
                 a.middle(href="#")
-                    img(src="static/img/general/logo.png")
+                    img(src="static/img/general/logo.png" alt="")
                     
             .header__contact-block
                 .header__contact-block__item
@@ -12,7 +12,7 @@ mixin footer(data)
                     
                         a.header__contact-block_link <i class="mail"></i> info@pravovoistatus.ru
                                 
-                        a.header__contact-block_link <i class="skype"></i> info@pravovoistatus.ru
+                        a.header__contact-block_link <i class="skype"></i> praovoistatus.ru
                         
                 .header__contact-block__item
                     .middle
@@ -23,7 +23,7 @@ mixin footer(data)
                         
             .footer__it-grade 
                 .middle
-                    a.footer__it-grade__logo
+                    a.footer__it-grade__logo(href="http://itgrade.ru/" target="_blank")
                         i
                         span Создано командой <br> Айти Грэйд
                     
