--- a/tars-master/markup/components/footer/footer.styl
+++ b/tars-master/markup/components/footer/footer.styl
@@ -28,6 +28,10 @@
             height 45px
             width 200px
             float left
+            @media screen and (min-width: 300px) and (max-width: 999px)
+                width 100%
+                br
+                    display none
             
             &:hover
                 span
