--- a/tars-master/markup/components/nav/nav.jade
+++ b/tars-master/markup/components/nav/nav.jade
@@ -3,23 +3,21 @@ mixin nav(data)
     nav.nav
         .content
             ul.topmenu
-                li
+            
+                li.burger-button#burger                
+                li.navlink
                     .middle
                         a(href="#services") Услуги
-                li
+                        
+                li.navlink
                     .middle
                         a(href="#about") О лицензировании
-                li
+                li.navlink
                     .middle
                         a(href="#static") Условия работы
-                li
+                li.navlink
                     .middle
                         a(href="#advantages") Преимущества работы с нами
-                li
+                li.navlink
                     .middle
                         a(href="#contacts") Контакты
-                li
-                    .middle
-
-            
-        
