--- a/tars-master/markup/components/question/question.jade
+++ b/tars-master/markup/components/question/question.jade
@@ -7,4 +7,4 @@ mixin question(data)
                 p Мы поможем пройти все этапы согласования и преодолеть возникшие  сложности при оформлении алкогольных лицензий!
                 
             .question__button-block
-                a.button(htef="#contacts") Заказать звонок
+                a.button(href="#contacts") Заказать звонок
