--- a/tars-master/markup/components/services/services.jade
+++ b/tars-master/markup/components/services/services.jade
@@ -9,14 +9,14 @@ mixin services(data)
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon1.png")
+                            img(src="static/img/general/icon1.png" alt="")
                             
                     h5.services__title Оформление лицензии
                                
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon2.png")
+                            img(src="static/img/general/icon2.png" alt="")
                             
                     h5.services__title Переоформление <br> лицензии
                     
@@ -24,7 +24,7 @@ mixin services(data)
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon3.png")
+                            img(src="static/img/general/icon3.png" alt="")
                             
                     h5.services__title Продление лицензии
                     
@@ -32,7 +32,7 @@ mixin services(data)
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon4.png")
+                            img(src="static/img/general/icon4.png" alt="")
                             
                     h5.services__title Возобновление <br> лицензии
                     
@@ -40,21 +40,21 @@ mixin services(data)
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon5.png")
+                            img(src="static/img/general/icon5.png" alt="")
                             
                     h5.services__title Возобновление <br> лицензии
                                                    
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon6.png")
+                            img(src="static/img/general/icon6.png" alt="")
                             
                     h5.services__title Возобновление <br> лицензии
                                                    
                 .services__item
                     .services__elips
                         .middle
-                            img(src="static/img/general/icon7.png")
+                            img(src="static/img/general/icon7.png" alt="")
                             
                     h5.services__title Возобновление <br> лицензии
                     
