--- a/tars-master/markup/components/slide/slide.jade
+++ b/tars-master/markup/components/slide/slide.jade
@@ -1,7 +1,7 @@
 mixin slide(data)
     
     .slide
-        img(src="static/img/general/hbg.jpg")
+        img(src="static/img/general/hbg.jpg" alt="")
         
         .slide__info
             article
