--- a/tars-master/markup/components/contacts/contacts.styl
+++ b/tars-master/markup/components/contacts/contacts.styl
@@ -10,9 +10,10 @@
         &:hover
             color colfirm
             
-        @media screen and (min-width: 300px) and (max-width: 599px)
+        @media screen and (min-width: 300px) and (max-width: 999px)
             font-size 16px
             margin-left 0px
+            padding: 0 20px !important;
             
         .mail
             width 31px
@@ -27,7 +28,7 @@
                                 
         .phone
             background-position -7px -5px
-            @media screen and (min-width: 300px) and (max-width: 599px)
+            @media screen and (min-width: 300px) and (max-width: 999px)
                 margin-left 10px
 
                                            
