--- a/tars-master/markup/components/header/header.jade
+++ b/tars-master/markup/components/header/header.jade
@@ -7,7 +7,7 @@ mixin header(data)
         .content
             .header__logo-block
                 a.middle(href="#")
-                    img(src="static/img/general/logo.png")
+                    img(src="static/img/general/logo.png" alt="Правовой статус")
                     
             .header__contact-block
                 .header__contact-block__item
@@ -15,7 +15,7 @@ mixin header(data)
                     
                         a.header__contact-block_link <i class="mail"></i> info@pravovoistatus.ru
                                 
-                        a.header__contact-block_link <i class="skype"></i> info@pravovoistatus.ru
+                        a.header__contact-block_link <i class="skype"></i> praovoistatus.ru
                         
                 .header__contact-block__item
                     .middle
