--- a/tars-master/markup/components/header/header.styl
+++ b/tars-master/markup/components/header/header.styl
@@ -70,6 +70,7 @@ height-media = 205px / 2
                  .header__contact-block_link
                     float none
                     display block
+                    margin 0 auto
                     
                 
         @media screen and (min-width: 300px) and (max-width: 999px)
@@ -80,6 +81,10 @@ height-media = 205px / 2
             .header__contact-block_link
                 float none
                 margin 0 20px
+                white-space nowrap
+                @media screen and (min-width: 300px) and (max-width: 999px)
+                    width 257px
+                    text-align left
 
                 
                     
