--- a/tars-master/markup/pages/index.jade
+++ b/tars-master/markup/pages/index.jade
@@ -14,6 +14,7 @@ html(class="no-js", lang="ru")
     include ../components/example/example
     include ../components/footer/footer 
     include ../components/contacts/contacts
+
     
     
 
@@ -39,6 +40,8 @@ html(class="no-js", lang="ru")
             //- +example()
 
             +footer()
+            a#top(href="#header")
+                span
 
         script(src='%=static=%js/separate-js/svg4everybody.min.js')
         script svg4everybody();
