--- a/tars-master/markup/components/header/header.jade
+++ b/tars-master/markup/components/header/header.jade
@@ -3,7 +3,7 @@
 
 mixin header(data)
     
-    header.header
+    header.header#header
         .content
             .header__logo-block
                 a.middle(href="#")
