--- a/tars-master/markup/static/stylus/common.styl
+++ b/tars-master/markup/static/stylus/common.styl
@@ -133,8 +133,10 @@ p
         background colfirm
         
     @media screen and (min-width: 300px) and (max-width: 999px)
-        top 0px
-        right  0px
+        bottom 70px
+        right 55px
+        border solid 2px colfirm
+
     
     span
         position absolute
@@ -144,5 +146,9 @@ p
         height 35px
         top 14px
         left 14px
+        @media screen and (min-width: 300px) and (max-width: 999px)
+            top 11px
+            left 11px
+    
     
     
