--- a/tars-master/markup/components/contacts/contacts.styl
+++ b/tars-master/markup/components/contacts/contacts.styl
@@ -14,6 +14,9 @@
             font-size 16px
             margin-left 0px
             padding: 0 20px !important;
+            float none
+            width 270px
+            text-align left
             
         .mail
             width 31px
@@ -110,8 +113,9 @@
         border-radius 3px
         outline none
         border solid 0px
-        @media screen and (min-width: 600px) and (max-width: 1199px)
-            float left
+        @media screen and (min-width: 300px) and (max-width: 1199px)
+            float none
+            margin 0 auto
         
         
         
