--- a/tars-master/markup/components/slide/slide.styl
+++ b/tars-master/markup/components/slide/slide.styl
@@ -4,12 +4,12 @@
     @media screen and (min-width: 300px) and (max-width: 599px)
         margin-bottom 155px
     
-    img
+    img,
+    picture
         width 100%
         height auto
         display block
-        @media screen and (min-width: 300px) and (max-width: 599px)
-            display none
+
         
         
     &__info
