--- a/tars-master/markup/components/slide/slide.jade
+++ b/tars-master/markup/components/slide/slide.jade
@@ -1,10 +1,8 @@
 mixin slide(data)
     
     .slide
-        picture
-            source(media="(min-width: 768px)" srcset="static/img/general/hbg.jpg 1200w" sizes="100vw")
-            source(media="(min-width: 300px)" srcset="static/img/general/hbg-min.jpg 800w" sizes="100vw")
-            img(srcset="images/400crop.jpg 400w" sizes="100vw")  
+        img(src="static/img/general/hbg.jpg" id="baner1" alt="хз, на ie проверить негде)")  
+        img(src="static/img/general/hbg-min.jpg" id="baner2" alt="хз, на ie проверить негде)")  
         
         .slide__info
             article
