--- a/tars-master/markup/components/slide/slide.styl
+++ b/tars-master/markup/components/slide/slide.styl
@@ -9,6 +9,16 @@
         width 100%
         height auto
         display block
+        
+    #baner1
+        display block
+        @media screen and (min-width: 300px) and (max-width: 767px)
+            display none
+        
+    #baner2
+        display none
+        @media screen and (min-width: 300px) and (max-width: 767px)
+            display block
 
         
         
